# shorten-url-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: basic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  url.rs
src/: lib.rs
