[package]
name = "shorten-url"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
description = "omit parts of a url for friendlier display"
repository = "goto-bus-stop/shorten-url-rs"
homepage = "https://github.com/goto-bus-stop/shorten-url-rs"
keywords = ["display", "shorten", "truncate", "url"]
categories = ["value-formatting"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "basic"
harness = false
