[package]
name = "shorten-url"
version = "1.0.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
description = "omit parts of a url for friendlier display"
repository = "https://github.com/goto-bus-stop/shorten-url-rs"
documentation = "https://docs.rs/shorten-url"
keywords = ["display", "shorten", "truncate", "url"]
categories = ["value-formatting"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "basic"
harness = false
